--- a/src/app/components/tabledisplay/tabledisplay.component.html
+++ b/src/app/components/tabledisplay/tabledisplay.component.html
@@ -6,65 +6,34 @@
 <div>
     <div class="col-lg-12">
         <div class="grid">
-          <p class="grid-header">Table With Badge</p>
+          <p class="grid-header">Transactions</p>
           <div class="item-wrapper">
             <div class="table-responsive">
-              <table class="table">
-                <thead>
-                  <tr>
-                    <th>Type</th>
-                    <th>Amount XTZ</th>
-                    <th>Created</th>
-                    <th>Status</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <td>
-                        <label class="badge badge-danger">Pending</label>
-                      </td>
-                    <td>Jacob</td>
-                    <td>53275531</td>
-                    <td>12 May 2017</td>
-                  </tr>
-                  <tr>
-                    <td>
-                        <label class="badge badge-warning">In progress</label>
-                      </td>
-                    <td>Messsy</td>
-                    <td>53275532</td>
-                    <td>15 May 2017</td>
+              <virtual-scroller #scroll [items]="tableasObject">
+                <table class="table">
+                  <thead #header>
+                    <tr>
+                      <th>Type</th>
+                      <th>Amount XTZ</th>
+                      <th>Created</th>
+                      <th>Address</th>
+                    </tr>
+                  </thead>
+                  <tbody #container> 
                     
-                  </tr>
-                  <tr>
-                    <td>
-                        <label class="badge badge-info">Fixed</label>
-                      </td>
-                    <td>John</td>
-                    <td>53275533</td>
-                    <td>14 May 2017</td>
-                
-                  </tr>
-                  <tr>
-                    <td>
-                        <label class="badge badge-success">Completed</label>
-                      </td>
-                    <td>Peter</td>
-                    <td>53275534</td>
-                    <td>16 May 2017</td>
-                    
-                  </tr>
-                  <tr>
-                    <td>
-                        <label class="badge badge-warning">In progress</label>
-                      </td>
-                    <td>Dave</td>
-                    <td>53275535</td>
-                    <td>20 May 2017</td>
-                   
-                  </tr>
-                </tbody>
-              </table>
+                      <tr *ngFor="let item of scroll.viewPortItems">
+                        <td>
+                            <label class="badge badge-danger"><mat-icon class="mat-icon-rtl-mirror" svgIcon="thumb-up"></mat-icon>{{item.transaction}}</label>
+                          </td>
+                        <td>{{item.amount}}</td>
+                        <td>{{item.date}}</td>
+                        <td>{{item.address}}</td>
+                      </tr>
+                 
+                  </tbody>
+                </table>
+                <div *ngIf="loading" class="loader">Loading...</div>
+              </virtual-scroller>
             </div>
           </div>
 </div>
